# dotdipper

./: .gitignore  CHANGELOG.md  COMMANDS_REFERENCE.md  Cargo.toml  LICENSE  QUICK_START.md  README.md  README_FEATURES.md  VERIFICATION_CHECKLIST.md  example-config.toml  flake.nix  install.sh
.github/: markdown-link-check-config.json
.github/workflows/: auto-release.yml  ci.yml  release.yml
packaging/aur/: PKGBUILD  PKGBUILD-bin
packaging/nix/: default.nix  flake.nix
packaging/scoop/: dotdipper.json
release-v0.3.0/: dotdipper-aarch64-apple-darwin.tar.gz.sha256  dotdipper-x86_64-apple-darwin.tar.gz.sha256
release-v0.3.1/: dotdipper-aarch64-apple-darwin.tar.gz.sha256  dotdipper-x86_64-apple-darwin.tar.gz.sha256
scripts/: build-release.sh  release.sh  update-formula.sh
src/: lib.rs  main.rs  paths.rs
src/cfg/: mod.rs
src/daemon/: mod.rs
src/diff/: mod.rs
src/hash/: mod.rs
src/install/: discover.rs  mod.rs  package_map.rs  validators.rs
src/install/analyzers/: generic.rs  git.rs  mod.rs  shell.rs  vim.rs
src/profiles/: mod.rs
src/remote/: bundle.rs  local_fs.rs  mod.rs  s3_backend.rs  webdav_backend.rs
src/repo/: apply.rs  mod.rs
src/scan/: mod.rs
src/secrets/: mod.rs
src/snapshots/: mod.rs
src/ui/: mod.rs
src/vcs/: mod.rs
tests/: diff_tests.rs  full_workflow_test.rs  hooks_tests.rs  integration_test.rs  secrets_tests.rs  stub_milestones_tests.rs
